apollo-federation/src/sources/connect/snapshots/apollo_federation__sources__connect__string_template__test_parse__expressions_with_nested_braces.snap
---
source: apollo-federation/src/sources/connect/string_template.rs
expression: "StringTemplate::<String>::parse(\"const{$config.one { two { three } }}another-const\",\n0).unwrap()"
---
StringTemplate {
    parts: [
        Constant(
            Constant {
                value: "const",
                location: 0..5,
            },
        ),
        Expression(
            Expression {
                expression: Path(
                    PathSelection {
                        path: WithRange {
                            node: Var(
                                WithRange {
                                    node: $config,
                                    range: Some(
                                        0..7,
                                    ),
                                },
                                WithRange {
                                    node: Key(
                                        WithRange {
                                            node: Field(
                                                "one",
                                            ),
                                            range: Some(
                                                8..11,
                                            ),
                                        },
                                        WithRange {
                                            node: Selection(
                                                SubSelection {
                                                    selections: [
                                                        Field(
                                                            None,
                                                            WithRange {
                                                                node: Field(
                                                                    "two",
                                                                ),
                                                                range: Some(
                                                                    14..17,
                                                                ),
                                                            },
                                                            Some(
                                                                SubSelection {
                                                                    selections: [
                                                                        Field(
                                                                            None,
                                                                            WithRange {
                                                                                node: Field(
                                                                                    "three",
                                                                                ),
                                                                                range: Some(
                                                                                    20..25,
                                                                                ),
                                                                            },
                                                                            None,
                                                                        ),
                                                                    ],
                                                                    range: Some(
                                                                        18..27,
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                    ],
                                                    range: Some(
                                                        12..29,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                12..29,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        7..29,
                                    ),
                                },
                            ),
                            range: Some(
                                0..29,
                            ),
                        },
                    },
                ),
                location: 6..35,
            },
        ),
        Constant(
            Constant {
                value: "another-const",
                location: 36..49,
            },
        ),
    ],
}
