apollo-federation/src/sources/connect/snapshots/apollo_federation__sources__connect__string_template__test_parse__simple_constant.snap
---
source: apollo-federation/src/sources/connect/string_template.rs
expression: template
---
StringTemplate {
    parts: [
        Constant(
            Constant {
                value: "text",
                location: 0..4,
            },
        ),
    ],
}
