apollo-federation/src/sources/connect/snapshots/apollo_federation__sources__connect__string_template__test_parse__simple_expression.snap
---
source: apollo-federation/src/sources/connect/string_template.rs
expression: "StringTemplate::<String>::parse(\"{$config.one}\", 0).unwrap()"
---
StringTemplate {
    parts: [
        Expression(
            Expression {
                expression: Path(
                    PathSelection {
                        path: WithRange {
                            node: Var(
                                WithRange {
                                    node: $config,
                                    range: Some(
                                        0..7,
                                    ),
                                },
                                WithRange {
                                    node: Key(
                                        WithRange {
                                            node: Field(
                                                "one",
                                            ),
                                            range: Some(
                                                8..11,
                                            ),
                                        },
                                        WithRange {
                                            node: Empty,
                                            range: Some(
                                                11..11,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        7..11,
                                    ),
                                },
                            ),
                            range: Some(
                                0..11,
                            ),
                        },
                    },
                ),
                location: 1..12,
            },
        ),
    ],
}
